[package]
name = "git-scan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
git2 = "0.18.2"
owo-colors = "4.0.0"
